# Nerv

./: Blockfile.h  CMakeLists.txt  CharacterFile.h  DirectoryFile.h  ExeFile.h  FifoFile.h  ImageFile.h  Makefile  Nerv.pro  Nerv.pro.user.b04e5c1  OtherFiles.h  README.md  RegularFile.h  ScrollCustomMenu.cpp  ScrollCustomMenu.h  Symlink.h  buttoncustommenu.cpp  buttoncustommenu.h  file.h  filecontroller.cpp  filecontroller.h  fileinlist.cpp  fileinlist.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  start.sh  textfile.h
build-Nerv-Desktop_Qt_6_5_2_GCC_64bit-Debug/: Makefile  Nerv  moc_ScrollCustomMenu.cpp  moc_mainwindow.cpp  moc_predefs.h  ui_mainwindow.h
cmake/: config.cmake
includes/: Blockfile.h  CharacterFile.h  CustomScrollArea.h  DirectoryFile.h  FifoFile.h  OtherFiles.h  RegularFile.h  ScrollCustomMenu.h  SocketFile.h  Symlink.h  buttoncustommenu.h  file.h  filecontroller.h  fileinlist.h  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
src/: CustomScrollArea.cpp  ScrollCustomMenu.cpp  buttoncustommenu.cpp  filecontroller.cpp  fileinlist.cpp  main.cpp  mainwindow.cpp
